k8s/monitoring/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: cookbookapp
spec:
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
